  * Upgrade to Lucene Search 3.0.0.
  * Upgrade to ehcache 1.7.0.
  * Upgrade to commons-pool 1.5.4.
  * Upgrade to JUnit 4.7.

Bugfixes:

  * Leading whitespace should be trimmed from category names such as
    "Category: Test" or "Category : Test".
  * Special:Import and Special:Export code refactored to avoid OOM errors with
    topics that have extensive history.

Translation Updates:


0.8.2
=====

New Features:

  * Updated spam filter patterns.
  * Update the default StartingPoints page with additional help info.

Bugfixes:

  * Fix MS SQL error when viewing topic history (hanspeterklapf).

Translation Updates:

  * Updated French translations (Guillaume_FRANCOIS55).
  * Updated German translations (axelclk).


0.8.1
=====

Bugfixes:

  * A link from a topic page to itself should be formatted as plain bold text,
    not as a link.  Reported by floatingworld.
  * XML imports of redirect topics were not redirecting properly.
  * Fix non-fatal MySQL upgrade warnings.  Reported by an anonymous user.
  * Fix code that could potentially leave database connections open during
    authentication.
  * Fix an issue that caused the Special:Maintance "database migration"
    functionality to fail.
  * Templates will now be listed on Special:Allpages.  Reported by
    floatingworld.

Translation Updates:

  * Updated Chinese translations (tan9).
  * Updated Polish translations (dlpa).


0.8.0
=====

New Features:

  * Drop support for JDK 1.4.  Java 5 or later is now required to run JAMWiki.
  * Special:Import can now import Mediawiki files with full history, edit
    dates, and edit comments.
  * Special:Export can now export topics in Mediawiki format with full history,
    edit dates, and edit comments.
  * Mediawiki-style logs for uploads, user creation, etc are now available via
    the Special:Log page.
  * Add an optional "Show Changes" button during editing to display a diff
    view of the current edit.